syntax = "proto3";

// well known types
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "GrpcChatSample.Common";

package GrpcChatSample.Common;

service Chat {
  rpc Write(ChatLog) returns (WriteResponse) {}
  rpc Subscribe(google.protobuf.Empty) returns (stream ChatLog) {}
}

message ChatLog {
	string from_name = 1;
	string to_name = 2;
	string content = 3;
	google.protobuf.Timestamp at = 4;
}

// WriteResponse 消息，用于表示写入操作的结果  
message WriteResponse {  
    bool success = 1;          // 操作是否成功  
    string error_message = 2;  // 错误信息  
} 